--- a/proyectoweb/blog.html
+++ b/proyectoweb/blog.html
@@ -16,7 +16,6 @@
                 <ul class="lista">
                     <li><a class="btn-menu" href="#blog">Blog</a></li>
                     <li><a class="btn-menu" href="index.html">ProyectoWeb</a></li>
-
                 </ul>
             </div>
             <div class="titular">
@@ -34,18 +33,13 @@
             <div class="articulos">
                 <article class="entrada">
                     <h4>¿Quién Soy?</h4>
-                    <p>Bienvenido a mi Blog Hola a todos, mi nombre es Marco Yahmir Antuna Leyva y soy un estudiante apasionado por el desarrollo de aplicaciones web. Desde que comencé este viaje, he aprendido a crear sitios web que no solo son funcionales, sino también atractivos y fáciles de usar.
-
-                        ¿Quién soy? Soy un estudiante que se especializa en aplicaciones web, siempre buscando aprender más y mejorar mis habilidades. Me encanta explorar nuevas tecnologías y tendencias en el desarrollo web, y estoy emocionado de compartir mis conocimientos con ustedes.</p>
+                    <p>Bienvenido a mi Blog. Hola a todos, mi nombre es Marco Yahmir Antuna Leyva y soy un estudiante apasionado por el desarrollo de aplicaciones web. Desde que comencé este viaje, he aprendido a crear sitios web que no solo son funcionales, sino también atractivos y fáciles de usar. 
+                    ¿Quién soy? Soy un estudiante que se especializa en aplicaciones web, siempre buscando aprender más y mejorar mis habilidades. Me encanta explorar nuevas tecnologías y tendencias en el desarrollo web, y estoy emocionado de compartir mis conocimientos con ustedes.</p>
                 </article>
                 <article class="entrada">
                     <h4>¿Que Ofrezco?</h4>
-                    <p>Además de estudiar, tengo mi propio sitio web donde ofrezco servicios de creación de páginas web. Si deseas tener una presencia en línea, ya sea para un negocio, un blog personal o cualquier otro proyecto, ¡estoy aquí para ayudarte! Me dedico a entender las necesidades de mis clientes y a brindarles un servicio personalizado para que obtengan el sitio web que desean.
-
-                        ¿Por qué elegir mis servicios?
-                        Enfoque personalizado: 
-                        Diseño atractivo: 
-                        Soporte continuo: 
+                    <p>Además de estudiar, tengo mi propio sitio web donde ofrezco servicios de creación de páginas web. Si deseas tener una presencia en línea, ya sea para un negocio, un blog personal o cualquier otro proyecto, ¡estoy aquí para ayudarte! Me dedico a entender las necesidades de mis clientes y a brindarles un servicio personalizado para que obtengan el sitio web que desean. 
+                    ¿Por qué elegir mis servicios? Enfoque personalizado: Diseño atractivo: Soporte continuo:</p>
                 </article>
             </div>
         </div>
