--- a/proyectoweb/index.html
+++ b/proyectoweb/index.html
@@ -102,7 +102,7 @@
                 <h3>Proyectos</h3>
                 <div class="contenedor-trabajos">
                     <!-- Trabajo 1 con imagen de portada -->
-                    <a href="/P2/proyectos/calculosJS/index.html" target="_blank" class="trabajo-link">
+                    <a href="../calculosJS/index.html" target="_blank" class="trabajo-link">
                         <div class="trabajo">
                             <img src="img/Calc.png" alt="Portada 1" class="trabajo-imagen">
                             <h4>Calculadora</h4>
@@ -111,7 +111,7 @@
                     </a>
                     
                     <!-- Trabajo 2 con imagen de portada -->
-                    <a href="/P2/proyectos/Conversiones/index.html" target="_blank" class="trabajo-link">
+                    <a href="../Conversiones/index.html" target="_blank" class="trabajo-link">
                         <div class="trabajo">
                             <img src="img/C-F.png" alt="Portada 2" class="trabajo-imagen">
                             <h4>Conversion</h4>
@@ -202,7 +202,7 @@
     <div class="callbutton">
         <div id="WAButton"></div>
         <div class="llamada">
-        <a href="tel:618" class="fas fa-phone-alt"></a>
+        <a href="tel:6183206091" class="fas fa-phone-alt"></a>
         </div>
     </div>
 
