--- a/proyectoweb/index.html
+++ b/proyectoweb/index.html
@@ -97,7 +97,7 @@
         </section>
 
         <!-- Sección Proyectos -->
-        <section id="mistrabajos">
+        <section id="proyectos">
             <div class="contenedor">
                 <h3>Proyectos</h3>
                 <div class="contenedor-trabajos">
@@ -162,8 +162,10 @@
 <a href="#inicio" class="icon-arrow-up"></a>
 
 <!-- Sección Contacto -->
+<section id="contacto">
 <section class="contacto">
     <h2>Contacto</h2>
+    <br>
     <div class="contact-name">MARCO YAHMIR ANTUNA LEYVA</div>
     <br><br>
     <div class="contact-links">
@@ -177,6 +179,7 @@
         </a>
     </div>
     <br><br>
+</section>
 </section>
 <a href="#inicio" class="icon-arrow-up"></a>
 
