--- a/Conversiones/index.html
+++ b/Conversiones/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <footer id="Abajo">
-        <p>.:YahmmirAntuna&copy;:.</p>
+        <p>.:: YahmmirAntuna&copy; ::.</p>
     </footer>
 </body>
 </html>
