--- a/proyectoweb/index.html
+++ b/proyectoweb/index.html
@@ -111,11 +111,11 @@
                     </a>
                     
                     <!-- Trabajo 2 con imagen de portada -->
-                    <a href="../Conversiones/index.html" target="_blank" class="trabajo-link">
+                    <a href="../menu_horizontal_css/index.html" target="_blank" class="trabajo-link">
                         <div class="trabajo">
-                            <img src="img/C-F.png" alt="Portada 2" class="trabajo-imagen">
-                            <h4>Conversion</h4>
-                            <p>Calculadora de temperatura de Celcius a Farenheit creada con HTML, CSS Y JavaScript</p>
+                            <img src="img/menu.png" alt="Portada 2" class="trabajo-imagen">
+                            <h4>Menu</h4>
+                            <p>Menu responsivo creado con Html y CSS</p>
                         </div>
                     </a>
                 </div>
